--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,6 +5,8 @@ driver:
     name: virtualbox
 lint:
   name: yamllint
+  options:
+    config-file: molecule/yamllint.yml
 platforms:
   - name: debian9
     box: debian/contrib-stretch64
